syntax = "proto3";
package register.client.pb;

service ClientRegisterService {

    rpc GetPublicKey(GetPublicKeyReq) returns (PublicKeyResp){}

	rpc Register(RegisterReq) returns (RegisterResp){}

    rpc GetTrackerServer(GetTrackerServerReq)returns (GetTrackerServerResp){}
}
message GetPublicKeyReq {
    uint32 version =1;
}

message PublicKeyResp {
    bytes publicKey=1;
}

message RegisterReq{
    uint32 version = 1;
	bytes nodeId = 2;
    bytes publicKeyEnc = 3;
    bytes contactEmailEnc = 4;

}

message RegisterResp{
    uint32 code = 1;//0:success, other value: failed
    string errMsg=2;
}

message GetTrackerServerReq{
    uint32 version=1;
    bytes nodeId=2;
    uint64 timestamp=3;
    bytes sign = 4;
}

message GetTrackerServerResp{
    repeated TrackerServer server=1;
}

message TrackerServer{
    string server=1;
    uint32 port=2;
}