package service

import (
	"context"
	"crypto/tls"
	"encoding/json"
	"errors"
	"fmt"
	"net/http"
	"strings"
	"sync"

	"time"

	"github.com/rs/cors"
	"github.com/samoslab/nebula/client/common"
	"github.com/samoslab/nebula/client/config"
	"github.com/samoslab/nebula/client/daemon"
	regclient "github.com/samoslab/nebula/client/register"
	"github.com/sirupsen/logrus"
	"github.com/unrolled/secure"
	"golang.org/x/crypto/acme/autocert"
)

const (
	shutdownTimeout = time.Second * 5

	// https://blog.cloudflare.com/the-complete-guide-to-golang-net-http-timeouts/
	// The timeout configuration is necessary for public servers, or else
	// connections will be used up
	serverReadTimeout  = time.Second * 10
	serverWriteTimeout = time.Second * 60
	serverIdleTimeout  = time.Second * 120

	// Directory where cached SSL certs from Let's Encrypt are stored
	tlsAutoCertCache = "cert-cache"
)

var (
	errInternalServerError = errors.New("Internal Server Error")
)

// HTTPServer exposes the API endpoints and static website
type HTTPServer struct {
	cfg           config.Config
	log           logrus.FieldLogger
	cm            *daemon.ClientManager
	httpListener  *http.Server
	httpsListener *http.Server
	quit          chan struct{}
	done          chan struct{}
}

// NewHTTPServer creates an HTTPServer
func NewHTTPServer(log logrus.FieldLogger, cm *daemon.ClientManager, cfg config.Config) *HTTPServer {
	return &HTTPServer{
		cfg: cfg,
		log: log.WithFields(logrus.Fields{
			"prefix": "nebula.http",
		}),
		cm:   cm,
		quit: make(chan struct{}),
		done: make(chan struct{}),
	}
}

// Run runs the HTTPServer
func (s *HTTPServer) Run() error {
	log := s.log
	log.Info("HTTP service start")
	defer log.Info("HTTP service closed")
	defer close(s.done)

	var mux http.Handler = s.setupMux()

	allowedHosts := []string{} // empty array means all hosts allowed
	sslHost := ""
	if s.cfg.AutoTLSHost == "" {
		// Note: if AutoTLSHost is not set, but HTTPSAddr is set, then
		// http will redirect to the HTTPSAddr listening IP, which would be
		// either 127.0.0.1 or 0.0.0.0
		// When running behind a DNS name, make sure to set AutoTLSHost
		sslHost = s.cfg.HTTPSAddr
	} else {
		sslHost = s.cfg.AutoTLSHost
		// When using -auto-tls-host,
		// which implies automatic Let's Encrypt SSL cert generation in production,
		// restrict allowed hosts to that host.
		allowedHosts = []string{s.cfg.AutoTLSHost}
	}

	if len(allowedHosts) == 0 {
		log = log.WithField("allowedHosts", "all")
	} else {
		log = log.WithField("allowedHosts", allowedHosts)
	}

	log = log.WithField("sslHost", sslHost)

	log.Info("Configured")

	secureMiddleware := configureSecureMiddleware(sslHost, allowedHosts)
	mux = secureMiddleware.Handler(mux)

	if s.cfg.HTTPAddr != "" {
		s.httpListener = setupHTTPListener(s.cfg.HTTPAddr, mux)
	}

	handleListenErr := func(f func() error) error {
		if err := f(); err != nil {
			select {
			case <-s.quit:
				return nil
			default:
				log.WithError(err).Error("ListenAndServe or ListenAndServeTLS error")
				return fmt.Errorf("http serve failed: %v", err)
			}
		}
		return nil
	}

	if s.cfg.HTTPAddr != "" {
		log.Info(fmt.Sprintf("HTTP server listening on http://%s", s.cfg.HTTPAddr))
	}
	if s.cfg.HTTPSAddr != "" {
		log.Info(fmt.Sprintf("HTTPS server listening on https://%s", s.cfg.HTTPSAddr))
	}

	var tlsCert, tlsKey string
	if s.cfg.HTTPSAddr != "" {
		log.Info("Using TLS")

		s.httpsListener = setupHTTPListener(s.cfg.HTTPSAddr, mux)

		tlsCert = s.cfg.TLSCert
		tlsKey = s.cfg.TLSKey

		if s.cfg.AutoTLSHost != "" {
			log.Info("Using Let's Encrypt autocert")
			// https://godoc.org/golang.org/x/crypto/acme/autocert
			// https://stackoverflow.com/a/40494806
			certManager := autocert.Manager{
				Prompt:     autocert.AcceptTOS,
				HostPolicy: autocert.HostWhitelist(s.cfg.AutoTLSHost),
				Cache:      autocert.DirCache(tlsAutoCertCache),
			}

			s.httpsListener.TLSConfig = &tls.Config{
				GetCertificate: certManager.GetCertificate,
			}

			// These will be autogenerated by the autocert middleware
			tlsCert = ""
			tlsKey = ""
		}

	}

	return handleListenErr(func() error {
		var wg sync.WaitGroup
		errC := make(chan error)

		if s.cfg.HTTPAddr != "" {
			wg.Add(1)
			go func() {
				defer wg.Done()
				if err := s.httpListener.ListenAndServe(); err != nil && err != http.ErrServerClosed {
					log.WithError(err).Println("ListenAndServe error")
					errC <- err
				}
			}()
		}

		if s.cfg.HTTPSAddr != "" {
			wg.Add(1)
			go func() {
				defer wg.Done()
				if err := s.httpsListener.ListenAndServeTLS(tlsCert, tlsKey); err != nil && err != http.ErrServerClosed {
					log.WithError(err).Error("ListenAndServeTLS error")
					errC <- err
				}
			}()
		}

		done := make(chan struct{})

		go func() {
			wg.Wait()
			close(done)
		}()

		select {
		case err := <-errC:
			return err
		case <-s.quit:
			return nil
		case <-done:
			return nil
		}
	})
}

func configureSecureMiddleware(sslHost string, allowedHosts []string) *secure.Secure {
	sslRedirect := true
	if sslHost == "" {
		sslRedirect = false
	}

	return secure.New(secure.Options{
		AllowedHosts: allowedHosts,
		SSLRedirect:  sslRedirect,
		SSLHost:      sslHost,

		// https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP
		// FIXME: Web frontend code has inline styles, CSP doesn't work yet
		// ContentSecurityPolicy: "default-src 'self'",

		// Set HSTS to one year, for this domain only, do not add to chrome preload list
		// https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers/Strict-Transport-Security
		STSSeconds:           31536000, // 1 year
		STSIncludeSubdomains: false,
		STSPreload:           false,

		// Deny use in iframes
		// https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers/X-Frame-Options
		FrameDeny: true,

		// Disable MIME sniffing in browsers
		// https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers/X-Content-Type-Options
		ContentTypeNosniff: true,

		// https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers/X-XSS-Protection
		BrowserXssFilter: true,

		// https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers/Referrer-Policy
		// "same-origin" is invalid in chrome
		ReferrerPolicy: "no-referrer",
	})
}

func setupHTTPListener(addr string, handler http.Handler) *http.Server {
	return &http.Server{
		Addr:         addr,
		Handler:      handler,
		ReadTimeout:  serverReadTimeout,
		WriteTimeout: serverWriteTimeout,
		IdleTimeout:  serverIdleTimeout,
	}
}

func (s *HTTPServer) setupMux() *http.ServeMux {
	mux := http.NewServeMux()

	handleAPI := func(path string, h http.Handler) {
		// Allow requests from a local samos client
		h = cors.New(cors.Options{
			AllowedOrigins: []string{"http://127.0.0.1:7788"},
		}).Handler(h)

		//h = gziphandler.GzipHandler(h)

		mux.Handle(path, h)
	}

	// API Methods
	handleAPI("/store/register", RegisterHandler(s))
	handleAPI("/store/email", EmailHandler(s))
	handleAPI("/store/mkfolder", MkfolderHandler(s))
	handleAPI("/store/upload", UploadHandler(s))
	handleAPI("/store/download", DownloadHandler(s))
	handleAPI("/store/list", ListHandler(s))
	handleAPI("/store/remove", RemoveHandler(s))

	return mux
}

type RegisterReq struct {
	Email     string `json:"email"`
	ConfigDir string `json:"config_dir"`
}

type VerifyEmailReq struct {
	Code string `json:"code"`
}

type MkfolderReq struct {
	Folders []string `json:"folders"`
	Parent  string   `json:"parent"`
}

type UploadReq struct {
	Files  string `json:"files"`
	Parent string `json:"parent"`
}

type DownloadReq struct {
	FileHash string `json:"filehash"`
	FileSize uint64 `json:"filesize"`
	FileName string `json:"filename"`
	Folder   bool   `json:"folder"`
}

type ListReq struct {
	Path string `json:"path"`
}

type RemoveReq struct {
	FilePath  string `json:"filepath"`
	Recursion bool   `json:"recursion"`
	Folder    bool   `json:"folder"`
}

// MkfolderHandler create folders
// Method: POST
// Accept: application/json
// URI: /store/mkfolder
// Args:
//    {"address": "...", "tokenType": "BTC"}

func RegisterHandler(s *HTTPServer) http.HandlerFunc {
	return func(w http.ResponseWriter, r *http.Request) {
		log := s.cm.Log
		ctx := r.Context()
		w.Header().Set("Accept", "application/json")

		if !validMethod(ctx, w, r, []string{http.MethodPost}) {
			return
		}

		if r.Header.Get("Content-Type") != "application/json" {
			errorResponse(ctx, w, http.StatusUnsupportedMediaType, errors.New("Invalid content type"))
			return
		}

		regReq := &RegisterReq{}
		decoder := json.NewDecoder(r.Body)
		if err := decoder.Decode(&regReq); err != nil {
			err = fmt.Errorf("Invalid json request body: %v", err)
			errorResponse(ctx, w, http.StatusBadRequest, err)
			return
		}

		defer r.Body.Close()

		log.Infof("register email %s dir %s", regReq.Email, regReq.ConfigDir)
		err := regclient.RegisterClient(log, regReq.ConfigDir, s.cfg.TrackerServer, regReq.Email)
		code := 0
		errmsg := ""
		result := "ok"
		if err != nil {
			log.Errorf("create folder %+v error %v", regReq, err)
			code = 1
			errmsg = err.Error()
			result = ""
		}

		rsp, err := common.MakeUnifiedHTTPResponse(code, result, errmsg)
		if err != nil {
			errorResponse(ctx, w, http.StatusBadRequest, err)
			return
		}
		if err := JSONResponse(w, rsp); err != nil {
			fmt.Printf("error %v\n", err)
		}
	}
}

func EmailHandler(s *HTTPServer) http.HandlerFunc {
	return func(w http.ResponseWriter, r *http.Request) {
		log := s.cm.Log
		ctx := r.Context()
		w.Header().Set("Accept", "application/json")

		if !validMethod(ctx, w, r, []string{http.MethodPost}) {
			return
		}

		if r.Header.Get("Content-Type") != "application/json" {
			errorResponse(ctx, w, http.StatusUnsupportedMediaType, errors.New("Invalid content type"))
			return
		}

		mailReq := &VerifyEmailReq{}
		decoder := json.NewDecoder(r.Body)
		if err := decoder.Decode(&mailReq); err != nil {
			err = fmt.Errorf("Invalid json request body: %v", err)
			errorResponse(ctx, w, http.StatusBadRequest, err)
			return
		}

		defer r.Body.Close()

		err := regclient.VerifyEmail(s.cfg.ConfigDir, s.cfg.TrackerServer, mailReq.Code)
		code := 0
		errmsg := ""
		result := "ok"
		if err != nil {
			log.Errorf("create folder %+v error %v", mailReq, err)
			code = 1
			errmsg = err.Error()
			result = ""
		}

		rsp, err := common.MakeUnifiedHTTPResponse(code, result, errmsg)
		if err != nil {
			errorResponse(ctx, w, http.StatusBadRequest, err)
			return
		}
		if err := JSONResponse(w, rsp); err != nil {
			fmt.Printf("error %v\n", err)
		}
	}
}

func MkfolderHandler(s *HTTPServer) http.HandlerFunc {
	return func(w http.ResponseWriter, r *http.Request) {
		log := s.cm.Log
		ctx := r.Context()
		w.Header().Set("Accept", "application/json")

		if !validMethod(ctx, w, r, []string{http.MethodPost}) {
			return
		}

		if r.Header.Get("Content-Type") != "application/json" {
			errorResponse(ctx, w, http.StatusUnsupportedMediaType, errors.New("Invalid content type"))
			return
		}

		mkReq := &MkfolderReq{}
		decoder := json.NewDecoder(r.Body)
		if err := decoder.Decode(&mkReq); err != nil {
			err = fmt.Errorf("Invalid json request body: %v", err)
			errorResponse(ctx, w, http.StatusBadRequest, err)
			return
		}

		defer r.Body.Close()

		log.Infof("mkfolder parent %s folders %+v\n", mkReq.Parent, mkReq.Folders)
		result, err := s.cm.MkFolder(mkReq.Parent, mkReq.Folders)
		if err != nil {
			log.Errorf("create folder %+v error %v", mkReq.Parent, mkReq.Folders, err)
		}

		code := 0
		errmsg := ""
		if !result {
			code = 1
			errmsg = err.Error()
		}

		rsp, err := common.MakeUnifiedHTTPResponse(code, result, errmsg)
		if err != nil {
			errorResponse(ctx, w, http.StatusBadRequest, err)
			return
		}
		if err := JSONResponse(w, rsp); err != nil {
			fmt.Printf("error %v\n", err)
		}
	}
}

func UploadHandler(s *HTTPServer) http.HandlerFunc {
	return func(w http.ResponseWriter, r *http.Request) {
		log := s.cm.Log
		ctx := r.Context()
		w.Header().Set("Accept", "application/json")

		if !validMethod(ctx, w, r, []string{http.MethodPost}) {
			return
		}

		if r.Header.Get("Content-Type") != "application/json" {
			errorResponse(ctx, w, http.StatusUnsupportedMediaType, errors.New("Invalid content type"))
			return
		}

		upReq := &UploadReq{}
		decoder := json.NewDecoder(r.Body)
		if err := decoder.Decode(&upReq); err != nil {
			err = fmt.Errorf("Invalid json request body: %v", err)
			errorResponse(ctx, w, http.StatusBadRequest, err)
			return
		}

		defer r.Body.Close()

		log.Infof("upload parent %s files %+v\n", upReq.Parent, upReq.Files)
		err := s.cm.UploadFile(upReq.Parent, upReq.Files)
		code := 0
		errmsg := ""
		result := "success"
		if err != nil {
			log.Errorf("upload files %+v error %v", upReq, err)
			code = 1
			errmsg = err.Error()
			result = ""
		}

		rsp, err := common.MakeUnifiedHTTPResponse(code, result, errmsg)
		if err != nil {
			errorResponse(ctx, w, http.StatusBadRequest, err)
			return
		}
		if err := JSONResponse(w, rsp); err != nil {
			fmt.Printf("error %v\n", err)
		}
	}
}

func DownloadHandler(s *HTTPServer) http.HandlerFunc {
	return func(w http.ResponseWriter, r *http.Request) {
		log := s.cm.Log
		ctx := r.Context()
		w.Header().Set("Accept", "application/json")

		if !validMethod(ctx, w, r, []string{http.MethodPost}) {
			return
		}

		if r.Header.Get("Content-Type") != "application/json" {
			errorResponse(ctx, w, http.StatusUnsupportedMediaType, errors.New("Invalid content type"))
			return
		}

		downReq := &DownloadReq{}
		decoder := json.NewDecoder(r.Body)
		if err := decoder.Decode(&downReq); err != nil {
			err = fmt.Errorf("Invalid json request body: %v", err)
			errorResponse(ctx, w, http.StatusBadRequest, err)
			return
		}

		defer r.Body.Close()

		log.Infof("download  %+v", downReq)
		err := s.cm.DownloadFile(downReq.FileName, downReq.FileHash, downReq.FileSize, downReq.Folder)
		code := 0
		errmsg := ""
		result := "success"
		if err != nil {
			log.Errorf("download files %+v error %v", downReq, err)
			code = 1
			errmsg = err.Error()
			result = ""
		}

		rsp, err := common.MakeUnifiedHTTPResponse(code, result, errmsg)
		if err != nil {
			errorResponse(ctx, w, http.StatusBadRequest, err)
			return
		}
		if err := JSONResponse(w, rsp); err != nil {
			fmt.Printf("error %v\n", err)
		}
	}
}

func ListHandler(s *HTTPServer) http.HandlerFunc {
	return func(w http.ResponseWriter, r *http.Request) {
		log := s.cm.Log
		ctx := r.Context()
		w.Header().Set("Accept", "application/json")

		if !validMethod(ctx, w, r, []string{http.MethodPost}) {
			return
		}

		if r.Header.Get("Content-Type") != "application/json" {
			errorResponse(ctx, w, http.StatusUnsupportedMediaType, errors.New("Invalid content type"))
			return
		}

		listReq := &ListReq{}
		decoder := json.NewDecoder(r.Body)
		if err := decoder.Decode(&listReq); err != nil {
			err = fmt.Errorf("Invalid json request body: %v", err)
			errorResponse(ctx, w, http.StatusBadRequest, err)
			return
		}

		defer r.Body.Close()

		log.Infof("list %+v", listReq)
		result, err := s.cm.ListFiles(listReq.Path)
		code := 0
		errmsg := ""
		if err != nil {
			log.Errorf("list files %+v error %v", listReq, err)
			code = 1
			errmsg = err.Error()
			result = nil
		}

		rsp, err := common.MakeUnifiedHTTPResponse(code, result, errmsg)
		if err != nil {
			errorResponse(ctx, w, http.StatusBadRequest, err)
			return
		}
		if err := JSONResponse(w, rsp); err != nil {
			fmt.Printf("error %v\n", err)
		}
	}
}

func RemoveHandler(s *HTTPServer) http.HandlerFunc {
	return func(w http.ResponseWriter, r *http.Request) {
		log := s.cm.Log
		ctx := r.Context()
		w.Header().Set("Accept", "application/json")

		if !validMethod(ctx, w, r, []string{http.MethodPost}) {
			return
		}

		if r.Header.Get("Content-Type") != "application/json" {
			errorResponse(ctx, w, http.StatusUnsupportedMediaType, errors.New("Invalid content type"))
			return
		}

		rmReq := &RemoveReq{}
		decoder := json.NewDecoder(r.Body)
		if err := decoder.Decode(&rmReq); err != nil {
			err = fmt.Errorf("Invalid json request body: %v", err)
			errorResponse(ctx, w, http.StatusBadRequest, err)
			return
		}

		defer r.Body.Close()

		log.Infof("remove %+v", rmReq)
		err := s.cm.RemoveFile(rmReq.FilePath, rmReq.Recursion, rmReq.Folder)
		code := 0
		errmsg := ""
		result := true
		if err != nil {
			log.Errorf("remove files %+v error %v", rmReq, err)
			code = 1
			errmsg = err.Error()
			result = false
		}

		rsp, err := common.MakeUnifiedHTTPResponse(code, result, errmsg)
		if err != nil {
			errorResponse(ctx, w, http.StatusBadRequest, err)
			return
		}
		if err := JSONResponse(w, rsp); err != nil {
			fmt.Printf("error %v\n", err)
		}
	}
}

// JSONResponse marshal data into json and write response
func JSONResponse(w http.ResponseWriter, data interface{}) error {
	w.Header().Set("Content-Type", "application/json")
	d, err := json.MarshalIndent(data, "", "    ")
	if err != nil {
		return err
	}

	_, err = w.Write(d)
	return err
}

func errorResponse(ctx context.Context, w http.ResponseWriter, code int, err error) {
	unifiedres, err := common.MakeUnifiedHTTPResponse(code, "", err.Error())
	if err != nil {
		return
	}
	if err := JSONResponse(w, unifiedres); err != nil {
		fmt.Printf("error response failed")
	}
}

// Shutdown stops the HTTPServer
func (s *HTTPServer) Shutdown() {
	s.log.Info("Shutting down HTTP server(s)")
	defer s.log.Info("Shutdown HTTP server(s)")
	close(s.quit)

	var wg sync.WaitGroup
	wg.Add(2)

	shutdown := func(proto string, ln *http.Server) {
		defer wg.Done()
		if ln == nil {
			return
		}
		log := s.log.WithFields(logrus.Fields{
			"proto":   proto,
			"timeout": shutdownTimeout,
		})

		defer log.Info("Shutdown server")
		log.Info("Shutting down server")

		ctx, cancel := context.WithTimeout(context.Background(), shutdownTimeout)
		defer cancel()
		if err := ln.Shutdown(ctx); err != nil {
			log.WithError(err).Error("HTTP server shutdown error")
		}
	}

	shutdown("HTTP", s.httpListener)
	shutdown("HTTPS", s.httpsListener)

	wg.Wait()

	<-s.done
}

func validMethod(ctx context.Context, w http.ResponseWriter, r *http.Request, allowed []string) bool {
	for _, m := range allowed {
		if r.Method == m {
			return true
		}
	}

	w.Header().Set("Allow", strings.Join(allowed, ", "))

	status := http.StatusMethodNotAllowed
	errorResponse(ctx, w, status, errors.New("Invalid request method"))

	return false
}
